Add data reference in Rd files

--- a/vignettes/samplesim.Rmd
+++ b/vignettes/samplesim.Rmd
@@ -15,9 +15,14 @@ vignette: >
 
 <!--
 
+### To build vignette (dev - remove inst/doc before push)
 library(devtools)
-setwd("/Users/nicolascasajus/Documents/samplesim")
+setwd("~/Documents/samplesim")
 devtools::build_vignettes()
+
+### To create PDF manual
+path <- find.package("samplesim")
+system(paste(shQuote(file.path(R.home("bin"), "R")), "CMD", "Rd2pdf", shQuote(path)))
 
 -->
 
