--- a/vignettes/samplesim.Rmd
+++ b/vignettes/samplesim.Rmd
@@ -45,7 +45,7 @@ system(paste(shQuote(file.path(R.home("bin"), "R")), "CMD", "Rd2pdf", shQuote(pa
 
 <div style = "margin-top:50px;"></div>
 
-This package allows the investigation of the effect of sample size on estimates and precision of stable isotope mixing solutions calculated with the package [**siar**](https://cran.r-project.org/web/packages/siar/index.html). Samples sizes are modified assuming a normal distribution with a user defined mean and standard deviation. Samples of different sizes are created from this distribution, and mixing proportions are estimated for several replicates of each sample size using the function `siar::siarmcmcdirchletv4()` and default values for the MCMC.
+This package allows the investigation of the effect of sample size on estimates and precision of stable isotope mixing solutions calculated with the package [**siar**](https://cran.r-project.org/web/packages/siar/index.html) or the package [**MixSIAR**](https://cran.r-project.org/web/packages/MixSIAR/index.html). Samples sizes are modified assuming a normal distribution with a user defined mean and standard deviation. Samples of different sizes are created from this distribution, and mixing proportions are estimated for several replicates of each sample size using the function `siar::siarmcmcdirchletv4()` or the function `MixSIAR::run_model()`.
 
 
 # Package installation
@@ -93,166 +93,278 @@ browseVignettes(package = "samplesim")
 
 # Data description
 
-Let's take a look at the data requirements. **samplesim** needs two type of data: one for the isotopic plasma values of the consumers (hereafter called `dataConsumer`) and one for the isotopic plasma values of the preys (hereafter called `dataPrey`).
+Let's take a look at the data requirements. **samplesim** needs three types of data:
+
+- the isotopic plasma values of the consumers
+- the isotopic plasma values of the preys (also called sources)
+- the trophic discrimination factors
 
 Datasets provided in this package come from Killengreen _et al._ (2011)[^1]
 
 [^1]: Killengreen S., Lecomte N., Ehrich D., Schott T., Yoccoz N.G. and Ims R.A. (2011) The importance of marine vs. human-induced subsidies in the maintenance of an expanding mesocarnivore in the arctic tundra. _Journal of Animal Ecology_, **80**, 1049-1060.
 
+To use these datasets with **samplesim** we will use the functions `load_mix_data()`, `load_source_data()` and `load_discr_data()` of the package **MixSIAR** to import and format the data.
 
 ## Consumers data {#consumers}
 
-The `dataConsumer` dataset contains the isotopic plasma values of the consumers over two isotopes. It must be structured in a data frame with at least two variables (one by isotope):
+This dataset contains the isotopic plasma values of the consumers over two (or more) isotopes. It must be structured in a data frame with two (or more) variables. Each column contains the isotopic plasma values of one isotope. In the example provided, this dataset contains two columns:
 
 - `d13C`, describing the plasma values of the d13C isotope
 - `d15N`, describing the plasma values of the d15N isotope
 
-Each row of the data frame corresponds to one consumer. Let's import the `dataConsumer` dataset available in the **samplesim** package.
+Each row of the data frame corresponds to one consumer. Let's take a look at the dataset available in the **samplesim** package by importing data with the **MixSIAR** function `load_mix_data()`.
 
 ```{r, eval = TRUE, echo = TRUE}
+# Get the location of the dataset
+mix.filename <- system.file("inst/external", "foxes_consumer.csv", package = "samplesim")
+
 # Import isotopic plasma values of the consumers
-data(dataConsumer)
-
-# Print the first ten rows
-head(dataConsumer, 10)
+consumer <- MixSIAR::load_mix_data(
+  filename     = mix.filename,
+  iso_names    = c("d13C", "d15N"),
+  factors      = NULL,
+  fac_random   = NULL,
+  fac_nested   = NULL,
+  cont_effects = NULL
+)
 ```
 
-- **Important:** make sure that column names are spelled such as in the above example.
-
-
-## Preys data {#preys}
-
-The `dataPrey` dataset contains the isotopic plasma values of the preys over two isotopes. It must be structured in a data frame with five variables :
-
-- `Sources`, the name of the sources (preys or groups of preys)
-- `Meand13C`, the mean values of the d13C isotope
-- `SDd13C`, the standard deviation of the d13C isotope
-- `Meand15N`, the mean values of the d15N isotope
-- `SDd15N`, the standard deviation of the d15N isotope
-
-Each row of the data frame corresponds to one source (prey or group of preys). Let's import the `dataPrey` dataset available in the **samplesim** package.
+- **Important:** Currently **samplesim** is not develop to deal with random factors or continuous covariate.
 
 ```{r, eval = TRUE, echo = TRUE}
-# Import isotopic plasma values of the preys
-data(dataPrey)
+# Get the class of the object
+class(consumer)
 
-# Print the data frame content
-dataPrey
+# Name of the list elements
+names(consumer)
+
+# Print the ten first rows of the isotopic values
+head(consumer$data_iso, 10)
+
+# Get the name of the isotopes
+consumer$iso_names
+
+# How many consumers are there in the dataset?
+consumer$N
 ```
 
-- **Important:** make sure that column names are spelled such as in the above example.
+For further details on the function `load_mix_data()` the reader is referred to the help page of this function (`?MixSIAR::load_mix_data`).
 
-In some case, your data might look like the consumers dataset, _i.e._ a data frame with the isotopic plasma values of each individual prey. Let's import the `dataRaw` dataset available in the **samplesim** package to illustrate this point.
 
+
+## Sources data {#sources}
+
+This dataset contains the isotopic plasma values of the sources over two (or more) isotopes. It must be structured in one of two following formats:
+
+- _Format \#1_
+
+A data frame with repeated measurements of plasma isotope (columns) for each source individual (row). In the example provided in **samplesim**, this dataset contains three columns:
+
+  - `Source`, the name of the sources
+  - `d13C`, the plasma values of the d13C isotope
+  - `d15N`, the plasma values of the d15N isotope
+
+- _Format \#2_
+
+A data frame expressing isotopic plasma values as means and standard deviation. This dataset also contains the sample size of each source. In the example provided in **samplesim**, this dataset contains six columns:
+
+  - `Sources`, the name of the sources
+  - `Meand13C`, the mean values of the d13C isotope
+  - `SDd13C`, the standard deviation of the d13C isotope
+  - `Meand15N`, the mean values of the d15N isotope
+  - `SDd15N`, the standard deviation of the d15N isotope
+  - `n`, the sample size of each source
+
+Let's take a look at the dataset available in the **samplesim** package by importing data with the **MixSIAR** function `load_source_data()`.
 
 ```{r, eval = TRUE, echo = TRUE}
-# Import raw isotopic plasma values of the preys
-data(rawPrey)
+# Get the location of the dataset
+sources.filename <- system.file("inst/external", "foxes_sources.csv", package = "samplesim")
 
-# Print the first ten rows
-head(rawPrey, 10)
+# Import mean isotopic plasma values of the sources (Format #1)
+sources <- load_source_data(
+  filename       = sources.filename,
+  source_factors = NULL,
+  conc_dep       = FALSE,
+  data_type      = "means",
+  mix            = consumer
+)
 ```
 
-The function `format_sources()` converts these raw data in the format of `dataPrey` by computing the mean and standard deviation of each isotope for each source. It is important to note that species can be grouped into sources (see below).
+If your data follow the format \#2, replace the value of the argument `data_type` by `raw`.
 
 ```{r, eval = TRUE, echo = TRUE}
-# List species names
-levels(rawPrey$Species)
+# Get the class of the object
+class(sources)
 
-# Group preys species into sources
-(src <- list(
-  Marine    = c("Ristri", "Urilom"),
-  Reindeer  = c("Rantar"),
-  Voles     = c("Micoec"),
-  Lemming   = c("Lemlem"),
-  Ptarmigan = c("Laglag", "Lagmut"),
-  Birds     = c("Melnig")))
+# Name of the list elements
+names(sources)
 
-# Format preys data
-(dataPrey <- format_sources(data = rawPrey, labels = src))
+# Print the mean values of isotopic plasma values
+sources$S_MU
+
+# Print the SD values of isotopic plasma values
+sources$S_SIG
+
+# Get the name of the isotopes
+sources$iso_names
+
+# Get the name of the sources
+sources$source_names
+
+# How many sources are there in the dataset?
+sources$n_array
 ```
 
-- **Note:** even if preys species do not have to be grouped, their labels need to be stored in a list. For example:
+For further details on the function `load_source_data()` the reader is referred to the help page of this function (`?MixSIAR::load_source_data`).
+
+## Discrimation data {#discrim}
+
+This dataset contains the trophic discrimination factor (TDF) of two (or more) isotopes for each source. It must be structured following the format \#2 of the sources dataset. In the example provided in **samplesim**, this dataset contains five columns:
+
+A data frame expressing isotopic plasma values as means and standard deviation. This dataset also contains the sample size of each source. In the example provided in **samplesim**, this dataset contains six columns:
+
+  - `Sources`, the name of the sources
+  - `Meand13C`, the mean values of the TDF for the d13C isotope
+  - `SDd13C`, the standard deviation of the TDF for the d13C isotope
+  - `Meand15N`, the mean values of the TDF for the d15N isotope
+  - `SDd15N`, the standard deviation of the TDF for the d15N isotope
+
+Let's take a look at the dataset available in the **samplesim** package by importing data with the **MixSIAR** function `load_discr_data()`.
 
 ```{r, eval = TRUE, echo = TRUE}
-# Prey species names
-(species <- c("Marine", "Birds", "Voles"))
+# Get the location of the dataset
+discr.filename <- system.file("inst/external", "foxes_discrimination.csv", package = "samplesim")
 
-# R List conversion
-(src <- as.list(species))
-
-# Name elements of the list
-names(src) <- species
-
-# Print list
-src
+# Import TDF values
+discr <- load_discr_data(
+  filename       = sources.filename,
+  mix            = consumer
+)
 ```
+
+```{r, eval = TRUE, echo = TRUE}
+# Get the class of the object
+class(discr)
+
+# Name of the list elements
+names(discr)
+
+# Print the mean values of TDF
+discr$mu
+
+# Print the SD values of TDF
+discr$sig2
+```
+
+For further details on the function `load_discr_data()` the reader is referred to the help page of this function (`?MixSIAR::load_discr_data`).
+
+
+# Data visualization
+
+The **samplesim** function `plot_isospace()` represents consumer and sources data in the isotopic space. This function is an adaptation of `MixSIAR::plot_data()` function and add color to source data. If you want you can export plot in PDF and/or PNG format.
+
+
+```{r, echo = TRUE, eval = TRUE, fig.width = 5, fig.height = 5}
+# Plot data in the isotopic space (samplesim function)
+samplesim::plot_isospace(
+  filename      = "isospace_samplesim",
+  plot_save_pdf = TRUE,
+  plot_save_png = FALSE,
+  mix           = consumer,
+  source        = sources,
+  discr         = discr
+)
+```
+
+If you prefer you can also used the `MixSIAR::plot_data()` function as follows:
+
+```{r, echo = TRUE, eval = TRUE, fig.width = 5, fig.height = 5}
+# Plot data in the isotopic space (MixSIAR function)
+MixSIAR::plot_data(
+  filename      = "isospace_mixsiar",
+  plot_save_pdf = TRUE,
+  plot_save_png = FALSE,
+  mix           = consumer,
+  source        = sources,
+  discr         = discr
+)
+```
+
+If your data make sense, let's move forward!
+
 
 
 # Running samplesim
 
-Make sure your data have the following format and the same column names:
-
-- Consumer dataset
-
-```{r, eval = TRUE, echo = FALSE}
-head(dataConsumer)
-```
-
-- Prey dataset
-
-```{r, eval = TRUE, echo = FALSE}
-head(dataPrey)
-```
-
-The core function of **samplesim** is `samplesim()`. It allows investigating the effect of sample size on estimates and precision of stable isotope mixing solutions. More specifically `samplesim()` assesses the sensitivity of isotopes mixing models to variation in numbers of samples from source tissues. This tool can be used prior to full-blown studies in a similar manner than power analyses. It used the function `siar::siarmcmcdirichletv4()` developed by Andrew Parnell and available in the package **siar**. User can choose to sample one particular source, or all the sources. User can also choose to modify consumer data. Sample sizes are modified assuming a normal distribution with a user defined mean and standard deviation. Samples of different sizes are created from this distribution, and mixing proportions are estimated for several replicates of each sample size.
+The core function of **samplesim** is `samplesim()`. It allows investigating the effect of sample size on estimates and precision of stable isotope mixing solutions. More specifically `samplesim()` assesses the sensitivity of isotopes mixing models to variation in numbers of samples from source tissues. This tool can be used prior to full-blown studies in a similar manner than power analyses. It used the function `siar::siarmcmcdirichletv4()` developed by Andrew Parnell and available in the package **siar**. **samplesim** can also be used with the package **MixSIAR** developed by Brian Stock et al. User can choose to sample one particular source, or all the sources. User can also choose to modify consumer data. Sample sizes are modified assuming a normal distribution with a user defined mean and standard deviation. Samples of different sizes are created from this distribution, and mixing proportions are estimated for several replicates of each sample size.
 
 The general writing of `samplesim()` is:
 
 ```{r, eval = FALSE, echo = TRUE}
 samplesim(
-  target,
-  sources,
-  type = NULL,
-  nsamples = NULL,
-  modwhich = NULL,
-  correct = NULL,
-  nrep = 100,
-  interval = 90,
-  name = NULL)
+  package     = "siar",
+  mix         = consumer,
+  source      = sources,
+  discr       = discr,
+  type        = NULL,
+  nsamples    = NULL,
+  modify      = NULL,
+  nrep        = 100,
+  interval    = 90,
+  name        = NULL,
+  resid_err   = TRUE,
+  process_err = FALSE,
+  run         = "test",
+  alpha.prior = 1
+)
 ```
 
 with:
 
-- `target`, the consumers dataset ([see Consumers data section](#consumers)).
-- `sources`, the preys dataset ([see Preys data section](#preys)).
+- `package`, the package name to be used to estimate mixing proportions. Must be one of _siar_ or _mixsiar_.
+- `mix`, the output returned by the `MixSIAR::load_mix_data()` function and containing consumer isotope values ([see Consumers data section](#consumers)).
+- `source`, the output returned by the `MixSIAR::load_source_data()` function and containing mean and standard deviation isotope values of sources (and in some case raw values; [see Preys data section](#sources)).
+- `discr`, the output returned by the `MixSIAR::load_discr_data()` function and containing TDF values ([see Discrimation data section](#discrim)).
 - `type`, the type of analysis to be run. Must be one of `one source`, `all sources` or `consumer`.
-- `nsamples`, the sample sizes to simulate.
-- `modwhich`, an integer indicating which source has to be modified.
-- `correct`, [optional] a data frame with discrimination values. See [**siar**](https://cran.r-project.org/web/packages/siar/index.html) for further details.
-- `nrep`, the number of replicates for each sample sizes.
-- `interval`, an integer indicating the width of credible interval to use for precision estimation.
-- `name`, the name of the simulation. If `NULL` the simulation will be named by the time of the simulation. This name will serve to create a directory in which results will be stored.
+- `nsamples`, a vector with the sample sizes to simulate.
+- `modify`, the name of the source to modify (case sensitive). This argument has to be specified when the argument `type` is set to _one source_. Otherwise it will be ignored.
+- `nrep`, an integer specifying the number of replicates for each sample sizes. Default is 100.
+- `interval`, an integer indicating the width of credible interval to use for precision estimation. Default is 90.
+- `name`, a character string giving the name of the simulation. If NULL the simulation will be named by the time of the simulation. This name will be used to create a directory in which results will be stored.
+- `resid_err`, boolean indicating if residual error is included in the model. See `?MixSIAR::run_model` for further informations. Only necessary if `package = mixsiar`.
+- `process_err`, boolean indicating if process error is included in the model. See `?MixSIAR::run_model` for further informations. Only necessary if `package = mixsiar`.
+- `run`, string or list specifying MCMC parameters. See `?MixSIAR::run_model` for further informations. Only necessary if `package = mixsiar`.
+- `alpha.prior`, a numeric giving the Dirichlet prior on p.global. See `?MixSIAR::run_model` for further informations. Only necessary if `package = mixsiar`.
 
-Let's take an example. We will assess the impact of the sample size of one source: the source \#3 (_Voles_) with several sample sizes (from 2 to 250). The analysis will be repeated 500 times.
+
+Let's take an example. We will assess the impact of the sample size of one source: the source \#6 (_Voles_) with several sample sizes (from 2 to 500). The analysis will be repeated 999 times.
 
 ```{r, eval = FALSE, echo = TRUE, message = FALSE}
 # samplesim run for one source
 samplesim(
-  target = dataConsumer,
-  source = dataPrey,
-  type = "one source",
-  modwhich = 3,
-  nsamples = c(2:10, 15, 25, 50, 75, 100, 250),
-  nrep = 500,
-  interval = 90,
-  name = "simulation_1")
+  package     = "siar",
+  mix         = consumer,
+  source      = sources,
+  discr       = discr,
+  type        = "one source",
+  nsamples    = c(2:10, 15, 25, 50, 75, 100, 150, 250, 500),
+  modify      = "Voles",
+  nrep        = 999,
+  interval    = 90,
+  name        = "test_siar",
+  resid_err   = TRUE,
+  process_err = FALSE,
+  run         = "test",
+  alpha.prior = 1
+)
 ```
 
-This function does not return any object in the R console. Instead, results are stored in the directory `simulation_1` and they will need to be imported for results visualization ([see below section](#results)).
+This function does not return any object in the R console. Instead, results are stored in the directory `test_siar` and they will need to be imported for results visualization ([see below section](#results)).
 
-- **Note:** if you want to estimate sample size impacts of all sources, you need to set `type = "all source"`. If you want to assess the impact of the sample size of consumers, you have to set `type = "consumer"`.
+- **Note 1:** if you want to estimate sample size impacts of all sources, you need to set `type = "all source"`. If you want to assess the impact of the sample size of consumers, you have to set `type = "consumer"`.
 
+- **Note 2:** the use of **samplesim** with the package **MixSIAR** requires the installation of the software JAGS. See the **MixSIAR** documentation for further details (`?MixSIAR`).
 
 # Results extraction {#results}
 
@@ -260,7 +372,7 @@ The `samplesim()` function has stored four objects results.
 
 ```{r, eval = TRUE, echo = TRUE}
 # Content of the new directory (results)
-dir("simulation_1")
+dir("test_siar")
 ```
 
 - `intervals`, a four dimensions array with the upper and lower bounds of the credible interval for each sample size, replicate and source. First dimension represents lower and upper bounds; second dimension corresponds to the number of sources; third dimension is the number of replicates; and fourth dimension is the number of sample size.
@@ -274,17 +386,17 @@ dir("simulation_1")
 A `logfile` is also written and contains all parameters of the simulation. Here's what it looks like.
 
 ```{r, echo = FALSE, eval = TRUE}
-# Import medians of credible intervals
-log <- readLines("simulation_1/logfile.txt")
+# Read the logfile
+log <- readLines("test_siar/logfile.txt")
 cat(paste0(log, collapse = "\n"))
 ```
 
 
-Now, let's take a look at the results and import the `medians` dataset using the R function `readRDS()`.
+Now, let's take a look at the results by importing the `medians` dataset using the R function `readRDS()`.
 
 ```{r, echo = TRUE, eval = TRUE}
 # Import medians of credible intervals
-medians <- readRDS("simulation_1/medians.rds")
+medians <- readRDS("test_siar/medians.rds")
 ```
 
 ```{r, echo = TRUE, eval = TRUE}
@@ -313,12 +425,11 @@ apply(medians, 3:2, mean)
 
 The structure of the `widths` dataset is the same as for `medians`.
 
-If you are uncomfortable to deal with three dimensions arrays, you can use the function `get_output()` of the **samplesim** package. This function converts these two arrays (i.e. `medians` and `widths`) into an unique data frame.
-For instance:
+If you are uncomfortable to deal with three dimensions arrays, you can use the function `get_output()` of the **samplesim** package. This function converts these two arrays (i.e. `medians` and `widths`) into an unique data frame. For instance:
 
 ```{r, echo = TRUE, eval = TRUE}
 # Import medians and widths of credible intervals
-datas <- get_output("simulation_1")
+datas <- samplesim::get_output("test_siar")
 
 # Structure of the data frame
 str(datas)
@@ -330,18 +441,22 @@ rbind(head(datas, 10), tail(datas, 10))
 If you want to select only the `widths` data,
 
 ```{r, echo = TRUE, eval = TRUE}
-# Import medians of credible intervals
+# Extract widths of credible intervals
 widths <- datas[datas$type == "Width of credible intervals", ]
 
 # Check
 rbind(head(widths, 10), tail(widths, 10))
 ```
 
-The argument _change_ of the function `get_output()` allows to compute the percentage of change of medians and widths respectively, based on a value of sample size (argument _reference_; default is the minimum sample size). For instance,
+The argument _change_ of the function `get_output()` allows to compute the percentage of change of medians and widths respectively, based on a reference value of sample size (argument _reference_; default is the minimum sample size). For instance,
 
 ```{r, echo = TRUE, eval = TRUE}
 # Import medians and widths of credible intervals expressed as percentage of change
-datas <- get_output("simulation_1", change = TRUE, reference = 2)
+datas <- samplesim::get_output(
+  name      = "test_siar",
+  change    = TRUE,
+  reference = 2
+)
 
 # Structure of the data frame
 str(datas)
@@ -352,6 +467,7 @@ rbind(head(datas, 10), tail(datas, 10))
 
 Here we notice that the column replicate is omitted and percentages of change are aggregated over replicates.
 
+
 # Results visualization
 
 The **samplesim** package also offers the possibility of visualizing the effect of sample size on the width of the credible interval and on the median of the posterior distribution of the mixing models. This is possible with the function `plot_samplesim()`.
@@ -359,21 +475,25 @@ The **samplesim** package also offers the possibility of visualizing the effect 
 
 ```{r, echo = TRUE, eval = TRUE, fig.width = 7.1, fig.height = 4.5}
 # Visualize results
-plot_samplesim(name = "simulation_1")
+samplesim::plot_samplesim(name = "test_siar")
 ```
 
 If you prefer you can represent the percentages of change:
 
 ```{r, echo = TRUE, eval = TRUE, fig.width = 7.1, fig.height = 4.5}
 # Visualize results expressed as percentages of change
-plot_samplesim(name = "simulation_1", change = TRUE, reference = 2)
+samplesim::plot_samplesim(
+  name      = "test_siar",
+  change    = TRUE,
+  reference = 2
+)
 ```
 
-Finally, if you are not satisfied with the quality of the graph, you can customized it by 1) importing data and 2) programming your own graph. Let's take an example with the [**ggplot2**](https://cran.r-project.org/web/packages/ggplot2/index.html) package (used in **samplesim**).
+Finally, if you are not satisfied with the quality of the graph, you can customize it by 1) importing data and 2) programming your own graph. Let's take an example with the [**ggplot2**](https://cran.r-project.org/web/packages/ggplot2/index.html) package (used in **samplesim**).
 
 ```{r, echo = TRUE, eval = TRUE, fig.width = 7.1, fig.height = 4.5}
 # Import medians and widths of credible intervals
-datas <- get_output("simulation_1")
+datas <- get_output("test_siar")
 
 # Reminder #1
 head(datas)
@@ -382,12 +502,32 @@ head(datas)
 tail(datas)
 
 # Graph
-ggplot(aes(x = size, y = value), data = datas) +
-  geom_boxplot(aes(fill = source), width = 0.8, outlier.shape = NA) +
-  labs(x = "Sample size", y = "Values", fill = "Sources") +
-  theme(legend.position = "bottom") +
-  theme(legend.title = element_blank()) +
-  facet_grid(. ~ type)
+ggplot(
+  aes(
+    x = size,
+    y = value
+  ),
+  data = datas
+) +
+geom_boxplot(
+  aes(
+    fill = source
+  ),
+  width         = 0.8,
+  outlier.shape = NA
+) +
+labs(
+  x    = "Sample size",
+  y    = "Values",
+  fill = "Sources"
+) +
+theme(
+  legend.position = "bottom"
+) +
+theme(
+  legend.title = element_blank()
+) +
+facet_grid(. ~ type)
 ```
 
 Or your can only represent the medians values. For instance (with percentages of change):
@@ -395,7 +535,10 @@ Or your can only represent the medians values. For instance (with percentages of
 
 ```{r, echo = TRUE, eval = TRUE, fig.width = 7.1, fig.height = 4.5}
 # Import medians and widths of credible intervals
-datas <- get_output("simulation_1", change = TRUE)
+datas <- samplesim::get_output(
+  name   = "test_siar",
+  change = TRUE
+)
 
 # Select medians of credible intervals
 medians <- datas[datas$type == "Median of posterior distribution", ]
@@ -404,13 +547,36 @@ medians <- datas[datas$type == "Median of posterior distribution", ]
 head(medians)
 
 # Graph
-ggplot(aes(x = size, y = value, group = source), data = medians) +
-  geom_point(aes(color = source)) +
-  geom_line(aes(color = source)) +
-  labs(x = "Sample size", y = "Change in medians (%)", color = "Sources") +
-  theme_light() +
-  theme(legend.position = "bottom") +
-  theme(legend.title = element_blank())
+ggplot(
+  aes(
+    x     = size,
+    y     = value,
+    group = source
+  ),
+  data = medians
+) +
+geom_point(
+  aes(
+    color = source
+  )
+) +
+geom_line(
+  aes(
+    color = source
+  )
+) +
+labs(
+  x     = "Sample size",
+  y     = "Change in medians (%)",
+  color = "Sources"
+) +
+theme_light() +
+theme(
+  legend.position = "bottom"
+) +
+theme(
+  legend.title = element_blank()
+)
 ```
 
 
