--- a/vignettes/samplesim.Rmd
+++ b/vignettes/samplesim.Rmd
@@ -643,7 +643,7 @@ ggplot(aes(x = size, y = value, group = source), data = medians) +
 
 ## Reference {-}
 
-Lecomte N., Ehrich D., Casajus N., Berteaux D., Giroux M.-A. and Yoccoz N.G. 
+Lecomte N., Ehrich D., Casajus N., Berteaux D., Cameron C., and Yoccoz N.G. 
 How many is enough? An R package for evaluating the effect of sample size on 
 estimates and precision of stable isotope mixing solutions. 
 Submitted to _Methods in Ecology and Evolution_.
